Update comparison of functional programming over other programming paradigms.

--- a/hw-sicurezza/hack-at-dac-2018/dac-slides/chisel-slide.tex
+++ b/hw-sicurezza/hack-at-dac-2018/dac-slides/chisel-slide.tex
@@ -139,7 +139,7 @@
 	Compare different implementations of a component for the {\it PULPino} system
 	\begin{itemize}
 	\item Use techniques from fault tolerance for detecting hardware trojans. 
-	\item While we cannot use TLM/RTL models from others, we can create our own TLM/RTL models (using {\it SystemC}, {\it Verilog}, and/or {\it Chisel}) for components of the {\it PULPino} system.
+	\item While we cannot use TLM/RTL models from others, we can create our own TLM/RTL models (using {\it SystemC}, {\it Verilog}, and/or {\it Chisel HDL}) for components of the {\it PULPino} system.
 %	\item E.g., processor, ALU, or adder for the RISC-V ISA.
 %	\item The same input is given to these different implementations.
 	\item The output of these different implementations is given to a majority gate (i.e., use majority voting).
@@ -156,36 +156,6 @@
 
 
 
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{References}
-
-%	Slide 1
-\frame
-{
-	\frametitle{References (1)}
-
-	\begin{itemize}
-	\item $[$Wikipedia contributors 2016$]$ Wikipedia contributors, ``Alice and Bob,'' in {\it Wikipedia, The Free Encyclopedia: Cryptographic protocols}, Wikimedia Foundation, San Francisco, CA, February 28, 2018. Available online at: \url{https://en.wikipedia.org/wiki/Alice_and_Bob}; last accessed on October 26, 2016.
-	\item $[$Khabarov 2015$]$ Sergey Khabarov, answer to ``What is meant by the FENCE instruction in the RISC-V instruction set?,'' Stack Exchange Inc., New York, NY, November 23, 2015. Available online from {\it Stack Exchange Inc.: Stack Overflow: Questions} at: \url{https://stackoverflow.com/questions/26374435/what-is-meant-by-the-fence-instruction-in-the-risc-v-instruction-set}; March 16, 2016 was the last accessed date.
-	\end{itemize}
-}
-
-
-
-%	Slide 2
-\frame
-{
-	\frametitle{References (2)}
-
-	\begin{itemize}
-	\item $[$Bushnell 2000$]$ Michael L. Bushnell and Vishwani D. Agrawal, ``Essentials of Electronic Testing for Digital, Memory, and Mixed-Signal {VLSI} Circuits,'' in {\it Frontiers in Electronic Testing} series, Vol. 17, Springer Science+Business Media, {Inc.}, New York, NY, 2000. DOI:10.1007/b117406.
-	\item $[$Wang 2006$]$ {Laung-Terng} Wang, {Cheng-Wen} Wu, and Xiaoqing Wen, ``{VLSI} Test Principles And Architectures: Design for Testability,'' in {\it The Morgan Kaufmann Series in Systems on Silicon}, Morgan Kaufmann, San Francisco, CA, 2006.
-	\end{itemize}
-}
 
 
 
